# Comfyui_Redux_Advanced

./: README.md  __init__.py  nodes.py  pyproject.toml
.github/workflows/: publish.yml
example/: 45.json  old version-Backup.json  redux prompt word + posture, multiple views.json  redux prompt word + posture, multiple views.json.json
