[project]
name = "redux_advanced"
description = "Redux style adds more controls"
version = "1.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/yichengup/Comfyui_Redux_Advanced"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "Comfyui_Redux_Advanced"
Icon = ""
